update header and navbar

--- a/src/style-common/variable.scss
+++ b/src/style-common/variable.scss
@@ -1,20 +1,23 @@
 // Color
-$primary-color: #fbda00;
+$primary-color: #ffe227;
 $secondary-color: #eee;
 $font-color: #333;
-$font-color-secondary: #bf081f;
+$font-color-secondary: #ffe227;
 
 // header
-$header-primary-color: #fed700;
-$header-secondary-color: #000;
+$header-primary-color: #ffe227;
+$header-secondary-color: #121013;
 $header-color-icon: #fff;
 $header-search-field-text: #fff;
 $header-border-div: #fff;
 $header-border-cart: #8F8F8F;
 
 // back to top 
-$back-to-top-primary: #fed700;
-$back-to-top-border: #000;
+$back-to-top-primary: #ffe227;
+$back-to-top-border: #121013;
 
 // product item
 $product-hover-color: #288ad6;
+
+//navbar 
+$navbar-color-hover: #f5f5f5;
