--- a/src/common/header/header.scss
+++ b/src/common/header/header.scss
@@ -129,3 +129,11 @@
 .header-blog-container:hover {
   background: rgba(255, 255, 255, 0.4);
 }
+
+.header-margin-left-20px {
+  margin-left: 20px;
+}
+
+.header-margin-left-5px {
+    margin-left: 5px;
+}
