--- a/src/components/productCard/productCard.scss
+++ b/src/components/productCard/productCard.scss
@@ -17,6 +17,7 @@
             color: $font-color;
             margin: 0 10px 5px;
             font-weight: 600;
+            padding: 2px;
         }
     }
     .product-img {
@@ -46,7 +47,7 @@
         }
     }
     .product-rate {
-        margin: 10px 0px 0px 5px;
+        margin: 10px 0px 0px 7px;
     }
 }
 
